# yarm

./: Cargo.toml  README.md
.github/workflows/: dev.yml  release.yml  rust.yml
src/: errors.rs  lib.rs
tests/: cli.rs
