[package]
name = "yarm"
version = "0.1.0"
edition = "2021"
author = "trdthg <trdthg@outlook.com>"
description = "yet another improved rm cmd"

[dependencies]
walkdir = "2.3.2"
clap = { version = "3.0.10", features = ["derive"] }
anyhow = "1.0.53"
thiserror = "1.0.30"
regex = "1.5.4"
log = "0.4.14"

[dev-dependencies]
assert_cmd = "2.0.4"
tempfile = "3.3.0"
predicates = "2.1.1"